<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
          android:id="@+id/navHome"
          android:title="@string/txt_menu_pagina_inicial"
          android:icon="@drawable/ic_action_home"
    />


    <group android:checkableBehavior ="single">
        <item android:title="@string/txt_opcoes">
            <menu>
                <item
                    android:id="@+id/navPet"
                    android:title="@string/txt_menu_caes"
                    android:icon="@drawable/ic_action_pet"
                    />
                <item
                    android:id="@+id/navAppointment"
                    android:title="@string/txt_menu_consultas"
                    android:icon="@drawable/ic_action_appointment"
                    />
                <item
                    android:id="@+id/navPackages"
                    android:title="@string/txt_menu_encomendas"
                    android:icon="@drawable/ic_action_packages"
                    />
            </menu>
        </item>
    </group>

    <item android:title="@string/txt_mapas">
        <menu>
            <item
                android:id="@+id/navMap"
                android:title="@string/txt_menu_servicos"
                android:icon="@drawable/ic_action_map"
                />
        </menu>
    </item>

    <item android:title="@string/txt_info">
        <menu>
            <item
                android:id="@+id/navInfoCaopanhia"
                android:title="@string/app_name"
                android:icon="@drawable/ic_action_info"
                />
            <item
                android:id="@+id/navInfoApp"
                android:title="@string/txt_app_movel"
                android:icon="@drawable/ic_action_app_movel"
                />
        </menu>
    </item>

    <item android:title="@string/txt_sessao">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:title="@string/txt_sair"
                android:icon="@drawable/ic_action_logout"
                />
        </menu>
    </item>


</menu>